Добавил Node.js веб-приложение с авторизацией и API.
В проекте появилась папка webadmin с сервером на Express, обеспечивающим авторизацию через сессии, работу с файлами данных (user.json, items.json) и API для CRUD-записей и смены пароля. Также добавлены клиентские HTML-страницы для входа и управления записями, конфигурация для docker-compose и .gitignore для игнорирования папки data.

--- a/configs/nginx/default.conf
+++ b/configs/nginx/default.conf
@@ -5,93 +5,10 @@ upstream php-fpm {
 }
 
 server {
-    listen 80;
-    server_name localhost;
-    root /var/www/html;
-    index index.php index.html index.htm;
-
-    # Логирование
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    # Безопасность - скрываем версию nginx
-    server_tokens off;
-
-    # Основное местоположение
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-    }
-
-    # Обработка PHP файлов через PHP-FPM upstream
-    location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-
-        # Проксируем запросы к PHP-FPM контейнеру
-        fastcgi_pass php-fpm;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-
-        include fastcgi_params;
-
-        # Дополнительные параметры
-        fastcgi_connect_timeout 60s;
-        fastcgi_send_timeout 60s;
-        fastcgi_read_timeout 60s;
-        fastcgi_buffer_size 128k;
-        fastcgi_buffers 4 256k;
-        fastcgi_busy_buffers_size 256k;
-        fastcgi_temp_file_write_size 256k;
-
-        # Передаем дополнительную информацию
-        fastcgi_param HTTP_PROXY "";
-        fastcgi_param HTTPS $https if_not_empty;
-    }
-
-    # Статические файлы - кеширование
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js|pdf|txt|tar|gz|woff|woff2|ttf|svg)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-        add_header Vary Accept-Encoding;
-        access_log off;
-
-        # Сжатие для текстовых файлов
-        location ~* \.(css|js|svg)$ {
-            gzip_static on;
-        }
-    }
-
-    # Запрет доступа к служебным файлам
-    location ~ /\.(ht|git|svn) {
-        deny all;
-        access_log off;
-        log_not_found off;
-    }
-
-    # Запрет доступа к backup файлам
-    location ~ \.(bak|backup|old|tmp)$ {
-        deny all;
-        access_log off;
-        log_not_found off;
-    }
-
-    # Защита от DoS атак
-    location = /favicon.ico {
-        log_not_found off;
-        access_log off;
-    }
-
-    location = /robots.txt {
-        log_not_found off;
-        access_log off;
-    }
-
-    # Статус PHP-FPM (опционально)
-    location ~ ^/(status|ping)$ {
-        fastcgi_pass php-fpm;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include fastcgi_params;
-        allow 127.0.0.1;
-        deny all;
-    }
+    listen 80 default_server;
+    listen [::]:80 default_server;
+    server_name _;
+    return 404;
 }
+
+
