--- a/configs/nginx/taskid.ru.conf
+++ b/configs/nginx/taskid.ru.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name taskid.ru www.taskid.ru;
+    server_name test.taskid.ru ;
 
     # Для certbot webroot
     location /.well-known/acme-challenge/ {
@@ -8,36 +8,23 @@ server {
         try_files $uri =404;
     }
 
-    # Редирект на HTTPS
     location / {
-        return 301 https://$server_name$request_uri;
+        proxy_pass http://192.168.1.22:8123;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        #  ^t   ^o WebSocket
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+       # Рекомендуемые настройки для стабильных WS
+        proxy_read_timeout 3600;
+        proxy_send_timeout 3600;
+        proxy_buffering off;
     }
 }
 
-server {
-    listen 443 ssl ;
-    server_name taskid.ru www.taskid.ru;
 
-    # Сертификаты из общей папки
-    ssl_certificate /etc/letsencrypt/live/taskid.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/taskid.ru/privkey.pem;
-
-    # SSL настройки
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
-    ssl_prefer_server_ciphers off;
-
-    root /var/www/html;
-    index index.php index.html;
-
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-    }
-
-    location ~ \.php$ {
-        fastcgi_pass php-fpm:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    }
-}
