Добавил поддержку SSL и активности записей в интерфейсе и API.
Теперь каждая запись содержит поля ssl и active, которые можно менять прямо из списка через чекбоксы, для этого добавлены PATCH эндпоинты на сервере и обновлена форма в html. Визуально неактивные записи стали выделяться, а при добавлении и редактировании доступны переключатели SSL и активности.

--- a/configs/nginx/default.conf
+++ b/configs/nginx/default.conf
@@ -1,8 +1,8 @@
-upstream php-fpm {
-    server php_fpm_server:9000;
-    # Можно добавить несколько серверов для балансировки
-    # server php-fpm2:9000;
-}
+#upstream php-fpm {
+#    server php_fpm_server:9000;
+#    # Можно добавить несколько серверов для балансировки
+#    # server php-fpm2:9000;
+#}
 
 server {
     listen 80 default_server;
