--- a/webadmin/nginx/template.conf
+++ b/webadmin/nginx/template.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name test.taskid.ru ;
+    server_name {domain} ;
 
     # Для certbot webroot
     location /.well-known/acme-challenge/ {
@@ -9,7 +9,8 @@ server {
     }
 
     location / {
-        proxy_pass http://192.168.1.22:8123;
+        proxy_pass {destination};
+#        proxy_pass http://192.168.1.22:8123;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
