--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,8 @@ services:
     container_name: webadmin-app
     image: node:18-alpine
     working_dir: /app
-    command: sh -c "npm install && npm start"
+#    command: sh -c "npm install && npm start"
+    command: sh -c "apk add --no-cache docker-cli && npm install && npm start"
     ports:
       - "8881:8881"
     volumes:
@@ -57,6 +58,7 @@ services:
       - node_modules:/app/node_modules  # анонимный volume, скрывает node_modules
       - ./data:/data
       - ./configs/nginx/sites:/nginx_config
+      - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - NODE_ENV=production
     restart: unless-stopped
