--- a/webadmin/nginx/template.conf
+++ b/webadmin/nginx/template.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name {domain} ;
+    server_name {host} ;
 
     # Для certbot webroot
     location /.well-known/acme-challenge/ {
