Добавил серверный блок для отклонения SSL-соединений.
Этот сервер слушает порт 443 и сразу отклоняет любые SSL-подключения с помощью ssl_reject_handshake on. Это используется для отказа нежелательным HTTPS-запросам на этот сервер. Такой подход помогает явно закрыть неиспользуемые SSL-входы.

--- a/configs/nginx/sites/default.conf
+++ b/configs/nginx/sites/default.conf
@@ -11,4 +11,8 @@ server {
     return 404;
 }
 
-
+server {
+    listen 443 ssl default_server;
+    server_name _;
+    ssl_reject_handshake on;
+}
