--- a/webadmin/nginx/template_ssl.conf
+++ b/webadmin/nginx/template_ssl.conf
@@ -4,7 +4,7 @@ server {
 
     # Для certbot webroot
     location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+        root /var/www/acme-webroot;
         try_files $uri =404;
     }
 
