--- a/webadmin/package.json
+++ b/webadmin/package.json
@@ -10,6 +10,11 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "body-parser": "^1.20.2",
-    "bcrypt": "^5.1.1"
+    "bcrypt": "^5.1.1",
+    "archiver": "^6.0.1",
+    "adm-zip": "^0.5.10",
+    "multer": "^1.4.5-lts.1"
   }
+
+
 }
