--- a/webadmin/nginx/template.conf
+++ b/webadmin/nginx/template.conf
@@ -11,7 +11,8 @@ server {
     location / {
         proxy_pass {destination};
 #        proxy_pass http://192.168.1.22:8123;
-        proxy_set_header Host $host;
+#        proxy_set_header Host $host;
+        proxy_set_header Host {new_host};
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
