--- a/webadmin/nginx/template_ssl.conf
+++ b/webadmin/nginx/template_ssl.conf
@@ -34,7 +34,7 @@ server {
     # Проксирование запросов
     location / {
         proxy_pass {destination};
-        proxy_set_header Host $host;
+        proxy_set_header Host {new_host};
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
