--- a/webadmin/nginx/template_ssl.conf
+++ b/webadmin/nginx/template_ssl.conf
@@ -43,6 +43,11 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+
+       # Рекомендуемые настройки для стабильных WS
+        proxy_read_timeout 3600;
+        proxy_send_timeout 3600;
+        proxy_buffering off;
     }
 }
 
