--- a/webadmin/nginx/template.conf
+++ b/webadmin/nginx/template.conf
@@ -10,14 +10,12 @@ server {
 
     location / {
         proxy_pass {destination};
-#        proxy_pass http://192.168.1.22:8123;
-#        proxy_set_header Host $host;
         proxy_set_header Host {new_host};
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        #  ^t   ^o WebSocket
+        # Для WebSocket
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
