--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,9 @@ services:
       # Конфигурационные файлы Nginx
       - ./configs/nginx/sites:/etc/nginx/conf.d/:ro
       - ./configs/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-#      - ./configs/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-#      - ./configs/nginx/taskid.ru.conf:/etc/nginx/conf.d/taskid.ru.conf:ro
       # Логи выводим наружу
-      - ./logs/nginx:/var/log/nginx
-#      - /var/log/nginx:/var/log/nginx
+#      - ./logs/nginx:/var/log/nginx
+      - /var/log/nginx:/var/log/nginx
 #    depends_on:
 #      - php-fpm
     networks:
@@ -94,5 +92,4 @@ networks:
 
 volumes:
   node_modules:
-#  mysql_data:
-#  redis_data:
+
