--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,10 +48,10 @@ services:
 
   webadmin-app:
     container_name: webadmin-app
-    image: node:18-alpine
+    image: node:20.18-alpine
     working_dir: /app
 #    command: sh -c "npm install && npm start"
-    command: sh -c "apk add --no-cache docker-cli && npm install && npm start"
+    command: sh -c "apk add --no-cache docker-cli && npm install -g npm@latest && npm start npm"
     ports:
       - "8881:8881"
     volumes:
