Добавил удаление SSL-сертификатов и версию приложения.
Теперь можно удалять отдельные или все SSL-сертификаты через интерфейс, после чего SSL для соответствующих доменов будет отключён. В нижней части страницы отображается актуальная версия приложения, получаемая с сервера.

--- a/webadmin/package.json
+++ b/webadmin/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "auth-app",
-  "version": "1.0.0",
-  "description": "Веб-приложение с авторизацией",
+  "name": "reverse-proxy-manager",
+  "version": "1.0.5",
+  "description": "Reverse Proxy Management System with SSL and DNS",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
