--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
 
     working_dir: /app
 #    command: sh -c "npm install && npm start"
-    command: sh -c "apk add --no-cache docker-cli && npm install -g npm@latest && npm start npm"
+    command: sh -c "apk add --no-cache docker-cli && npm install -g npm@latest && npm install && npm start"
     ports:
       - "8881:8881"
     volumes:
