--- a/webadmin/nginx/template_ssl.conf
+++ b/webadmin/nginx/template_ssl.conf
@@ -35,12 +35,12 @@ server {
     location / {
         proxy_pass {destination};
         proxy_set_header Host {new_host};
-        proxy_set_header X-Real-IP $remote_addr;
+        #proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        proxy_ssl_server_name on;
-        proxy_ssl_name {new_host};
+        #proxy_ssl_server_name on;
+        #proxy_ssl_name {new_host};
 
         # Для WebSocket
         proxy_http_version 1.1;
