--- a/webadmin/nginx/template.conf
+++ b/webadmin/nginx/template.conf
@@ -15,8 +15,8 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-       # proxy_ssl_server_name on;
-       # proxy_ssl_name {new_host};
+        proxy_ssl_server_name on;
+        proxy_ssl_name {new_host};
 
         # Для WebSocket
         proxy_http_version 1.1;
